# firebase-rs-sdk

./: .gitignore  AGENTS.md  AI_LOG.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  JSEXAMPLE.ts  LICENSE  README.md  RUSTDOC.md  RUSTEXAMPLE.rs  TODO.md  WASM_PLAN.md  rustfmt.toml  tree.txt
.github/workflows/: wasm-tests.yml
docs/: async_wasm_checklist.md
docs-devsite/: README.md
examples/: ai_generate_text_basic.rs  ai_prepare_generate_content.rs  ai_vertex_generate_text.rs  analytics_consent_and_defaults.rs  analytics_log_event.rs  analytics_measurement_protocol.rs  app_basic.rs  app_check_custom_provider.rs  auth_email_password.rs  auth_oauth_popup_wasm.rs  auth_oauth_redirect_desktop.rs  auth_passkey_roundtrip.rs  database_child_events.rs  database_priority_server_values.rs  database_realtime_auth.rs  firestore_insert_document.rs  firestore_select_documents.rs  firestore_with_converter.rs  functions_basic_callable.rs  functions_custom_domain_or_emulator.rs  functions_typed_payload.rs  installations_get_id_and_token.rs  installations_internal_component.rs  oauth_popup_wasm.rs  oauth_redirect_desktop.rs  remote_config_custom_signals.rs  remote_config_fetch_and_activate.rs  remote_config_file_storage.rs  storage_get_stream.rs  storage_upload_string.rs
examples/firestore/: insert_document.rs  with_converter.rs
examples/supporting_js/: auth_oauth_popup_wasm-auth_popup.js
examples_old/: app_basic.rs  app_check_custom_provider.rs  database_child_events.rs  firestore_insert_document.rs  installations_get_id_and_token.rs
scripts/: cargo_check.bat  cargo_check.sh  cargo_check_test.bat  cargo_check_test.sh  cargo_test.bat  cargo_test.sh  smoke.bat  smoke.sh  update_rustdoc.py
src/: RUSTDOC.md  doctest_support.rs  lib.rs
src/ai/: AI_LOG.md  LOG.md  PORTING_STATUS.md  README.md  api.rs  backend.rs  constants.rs  error.rs  helpers.rs  mod.rs  public_types.rs  requests.rs
src/ai/models/: generative_model.rs  mod.rs
src/analytics/: AI_LOG.md  LOG.md  PORTING_STATUS.md  README.md  api.rs  config.rs  constants.rs  error.rs  gtag.rs  mod.rs  transport.rs
src/app/: AI_LOG.md  JSEXAMPLE.md  LOG.md  PORTING_STATUS.md  README.md  api.rs  component.rs  constants.rs  core_components.rs  errors.rs  heartbeat.rs  logger.rs  mod.rs  namespace.rs  platform_logger.rs  private.rs  registry.rs  types.rs
src/app_check/: AI_LOG.md  JSEXAMPLE.md  LOG.md  PORTING_STATUS.md  README.md  api.rs  client.rs  errors.rs  interop.rs  logger.rs  mod.rs  persistence.rs  providers.rs  recaptcha.rs  refresher.rs  state.rs  time.rs  token_provider.rs  types.rs  util.rs
src/auth/: AI_LOG.md  EXAMPLE_USAGE.md  JSEXAMPLE.md  LOG.md  PORTING_STATUS.md  README.md  api.rs  error.rs  mod.rs  model.rs  token_manager.rs  token_provider.rs  types.rs
src/auth/api/: account.rs  idp.rs  token.rs  wasm.rs
src/auth/oauth/: credential.rs  mod.rs  pkce.rs  provider.rs  providers.rs  redirect.rs
src/auth/persistence/: file.rs  indexed_db.rs  mod.rs  web.rs
src/auth/phone/: mod.rs
src/blocking/: database.rs  mod.rs
src/component/: component.rs  constants.rs  container.rs  mod.rs  provider.rs  tests.rs  types.rs
src/data_connect/: AI_LOG.md  CHANGELOG.md  LOG.md  PORTING_STATUS.md  README.md  api.rs  config.rs  constants.rs  error.rs  mod.rs  mutation.rs  query.rs  reference.rs  transport.rs
src/database/: AI_LOG.md  LOG.md  PORTING_STATUS.md  README.md  api.rs  backend.rs  constants.rs  error.rs  mod.rs  on_disconnect.rs  push_id.rs  query.rs  realtime.rs  server_value.rs
src/database/realtime/: mod.rs
src/firebase/: firestore.rs
src/firestore/: AI_LOG.md  LOG.md  PORTING_STATUS.md  README.md  constants.rs  error.rs  mod.rs  query_evaluator.rs
src/firestore/api/: aggregate.rs  converter.rs  database.rs  document.rs  mod.rs  operations.rs  query.rs  reference.rs  snapshot.rs  write_batch.rs
src/firestore/local/: memory.rs  mod.rs  overlay.rs  sync_engine.rs
src/firestore/model/: database_id.rs  document_key.rs  field_path.rs  geo_point.rs  mod.rs  resource_path.rs  timestamp.rs
src/firestore/remote/: connection.rs  mod.rs  mutation.rs  remote_event.rs  remote_store.rs  remote_syncer.rs  rpc_error.rs  serializer.rs  structured_query.rs  syncer_bridge.rs  watch_change.rs  watch_change_aggregator.rs
src/firestore/test_support/: path.rs
src/firestore/value/: array_value.rs  bytes_value.rs  map_value.rs  mod.rs  value.rs
src/functions/: AI_LOG.md  LOG.md  PORTING_STATUS.md  README.md  api.rs  constants.rs  context.rs  error.rs  mod.rs  transport.rs
src/installations/: AI_LOG.md  PORTING_STATUS.md  README.md  api.rs  config.rs  constants.rs  error.rs  mod.rs  persistence.rs  rest.rs  types.rs
src/installations/rest/: mod.rs  native.rs  tests.rs  wasm.rs
src/logger/: mod.rs
src/messaging/: AI_LOG.md  LOG.md  PORTING_STATUS.md  README.md  api.rs  constants.rs  error.rs  mod.rs  subscription.rs  support.rs  sw_manager.rs  token_store.rs  types.rs
src/messaging/fcm_rest/: mod.rs  native.rs  tests.rs  wasm.rs
src/performance/: AI_LOG.md  CHANGELOG.md  PORTING_STATUS.md  README.md  api.rs  constants.rs  error.rs  instrumentation.rs  mod.rs  storage.rs  transport.rs
src/platform/: environment.rs  mod.rs  runtime.rs  token.rs
src/platform/browser/: indexed_db.rs
src/remote_config/: AI_LOG.md  LOG.md  PORTING_STATUS.md  README.md  api.rs  constants.rs  error.rs  fetch.rs  mod.rs  settings.rs  storage.rs  value.rs
src/storage/: AI_LOG.md  LOG.md  PORTING_STATUS.md  README.md  api.rs  constants.rs  error.rs  list.rs  location.rs  metadata.rs  mod.rs  path.rs  reference.rs  service.rs  stream.rs  string.rs  upload.rs  util.rs  wasm.rs
src/storage/metadata/: mod.rs  serde.rs
src/storage/request/: backoff.rs  builders.rs  info.rs  mod.rs  transport.rs
src/test_support/: firebase.rs  http.rs  mod.rs
src/util/: assert.rs  backoff.rs  base64.rs  compat.rs  constants.rs  deep_copy.rs  environment.rs  errors.rs  formatters.rs  json.rs  jwt.rs  mod.rs  obj.rs  runtime.rs  sha1.rs  subscribe.rs
tests/: database_listeners.rs  wasm2.rs  wasm_database_listeners.rs  wasm_smoke.rs
(+21 files in other folders)
