[package]
name = "firebase-rs-sdk"
version = "1.34.2"
edition = "2021"
description = "Rust port of the Firebase JS SDK"
readme = "README.md"
repository = "https://github.com/dgasparri/firebase-rs-sdk"
keywords = ["firebase", "sdk", "webassembly", "ai", "firestore"]
categories = ["api-bindings", "authentication", "database", "wasm", "web-programming"]
license = "Apache-2.0"
authors = ["Duccio Marco Gasparri"]
rust-version = "1.75"

# which files go into the published tarball
include = [
  "examples/**",
  "src/**",
  "Cargo.toml",
  "LICENSE*",
  "./RUSTDOC.md",
  "./README.md"
]

[features]
default = []
wasm-web = ["wasm-bindgen", "js-sys", "web-sys", "wasm-bindgen-futures"]
# ai-http = []
experimental-indexed-db = []
# firestore = []

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
sha1 = "0.10"
rand = "0.8"
percent-encoding = "2"
url = "2"
sha2 = { version = "0.10.9", features = ["std"] }
once_cell = "1.19"
async-trait = "0.1"
async-lock = "3"
bytes = "1"
futures = { version = "0.3", default-features = false, features = ["executor", "std"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
async-channel = "1"
log = "0.4"

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "Window",
    "Document",
    "WorkerGlobalScope",
    "Storage",
    "StorageEvent",
    "EventTarget",
    "BroadcastChannel",
    "MessageEvent",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlScriptElement",
    "CssStyleDeclaration",
    "BinaryType",
    "CloseEvent",
    "console",
    "Navigator",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "PushManager",
    "PushSubscription",
    "PushSubscriptionOptionsInit",
    "PushEncryptionKeyName",
    "PushSubscriptionJson",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "DomException",
    "DomStringList",
    "Event",
    "Performance",
    "PerformanceEntry",
    "PerformanceNavigationTiming",
    "PerformanceObserver",
    "PerformanceObserverEntryList",
    "PerformanceObserverInit",
    "PerformanceResourceTiming",
    "Url",
    "WebSocket",
    "Notification",
    "NotificationPermission",
    "RegistrationOptions",
    "ServiceWorkerUpdateViaCache",
]

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dev-dependencies]
serde-wasm-bindgen = "0.5"
webbrowser = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt", "time", "net", "sync"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
tokio-util = { version = "0.7", features = ["io"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
tokio = { version = "1", features = ["macros", "rt", "io-util"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["macros", "rt", "fs", "io-util"] }


[package.metadata.docs.rs]
all-features = true

# Cross-targets if needed (WASM, etc.)
# default-target = "x86_64-unknown-linux-gnu"
# targets = ["wasm32-unknown-unknown", "x86_64-unknown-linux-gnu"]

[[example]]
name = "ai_generate_text_basic"

[[example]]
name = "ai_vertex_generate_text"

[[example]]
name = "ai_prepare_generate_content"

[[example]]
name = "app_basic"

[[example]]
name = "app_check_custom_provider"

[[example]]
name = "analytics_log_event"

[[example]]
name = "analytics_measurement_protocol"

[[example]]
name = "analytics_consent_and_defaults"

[[example]]
name = "auth_email_password"

[[example]]
name = "auth_oauth_popup_wasm"

[[example]]
name = "auth_oauth_redirect_desktop"

[[example]]
name = "auth_passkey_roundtrip"

[[example]]
name = "database_child_events"

[[example]]
name = "database_priority_server_values"

[[example]]
name = "database_realtime_auth"

[[example]]
name = "functions_basic_callable"

[[example]]
name = "functions_custom_domain_or_emulator"

[[example]]
name = "functions_typed_payload"

[[example]]
name = "firestore_insert_document"

[[example]]
name = "firestore_select_documents"

[[example]]
name = "firestore_with_converter"

[[example]]
name = "installations_get_id_and_token"

[[example]]
name = "installations_internal_component"

[[example]]
name = "remote_config_fetch_and_activate"

[[example]]
name = "remote_config_custom_signals"

[[example]]
name = "remote_config_file_storage"

[[example]]
name = "storage_get_stream"

[[example]]
name = "storage_upload_string"
